Fix some warnings